--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,3 @@
 install: 
 FILE="-Dfile=play-services-tapandpay-18.2.0.aar"
-mvn install:install-file $FILE -DgroupId=com.group.module -DartifactId=play-services-tapandpay -Dversion=1.0 -Dpackaging=aar -DpomFile=pom.xml
+mvn install:install-file $FILE -DgroupId=com.google.android.gms.play-services-tapandpay.18.2.0 -DartifactId=play-services-tapandpay -Dversion=1.3 -Dpackaging=aar -DgeneratePom=true
