--- a/playServicesTapAndPay/pom.xml
+++ b/playServicesTapAndPay/pom.xml
@@ -4,7 +4,7 @@
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
              http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
-   <groupId>com.google.android.gms.play-services-tapandpay</groupId>
-   <artifactId>play-services-tapandpay</artifactId>
-   <version>1.4</version>
+   <groupId>com.google.android.gms.playServicesTapAndPay</groupId>
+   <artifactId>prod</artifactId>
+   <version>1.5</version>
 </project>
