--- a/playServicesTapAndPay/jitpack.yml
+++ b/playServicesTapAndPay/jitpack.yml
@@ -1,3 +1,3 @@
 install: 
-FILE="-Dfile=play-services-tapandpay-18.2.0.aar"
-mvn install:install-file $FILE -DgroupId=com.google.android.gms -DartifactId=play-services-tapandpay -Dversion=18.2.0 -Dpackaging=aar -DpomFile=pom.xml
+ - FILE="-Dfile=play-services-tapandpay-18.2.0.aar" 
+ - mvn install:install-file $FILE -DgroupId=com.google.android.gms -DartifactId=play-services-tapandpay -Dversion=18.2.0 -Dpackaging=aar -DpomFile=pom.xml
